--- a/templates/home.html
+++ b/templates/home.html
@@ -1,63 +1,46 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-      crossorigin="anonymous"
-    ></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <div class="container bg-primary shadow rounded">
-        <div class="row">
-            <h4>Hear a joke</h4>
-            {% if joke %}
-            <p>{{ joke }}</p>
-            {% endif %}
-        </div>
-        <div class="row">
-            <h1 class="text-center text-white">Weather App</h1>
-        </div>
-      <div class="row">
-        <form action="" method="get">
-          <label for="location">Enter Location:</label>
-          <input
-            type="text"
-            id="location"
-            name="location"
-            placeholder="City, Country"
-            class="form-control"
-          />
-          <button type="submit" class="btn btn-secondary">Get Weather</button>
-          <!-- use my location -->
-            <button type="button" class="btn btn-secondary">Use My Location</button>
-
-        </form>
-      </div>
-
-      <div class="row">
-        {% if data %}
+{% extends "templates/base.html"%}
+{% block content %}
+<div class="container bg-success">
+    <div class="row">
+      <h1 class="text-center text-white">Weather App</h1>
+    </div>
+    <div class="row">
+      <form action="" method="get">
+        <label for="location">Enter Location:</label>
+        <input
+          type="text"
+          id="location"
+          name="location"
+          placeholder="City, Country"
+          class="form-control"
+        />
+        <button type="submit" class="btn btn-secondary">Get Weather</button>
+        <!-- use my location -->
+        <button type="button" class="btn btn-secondary">
+          Use My Location
+        </button>
+      </form>
+    </div>
+    {% if data %}
+    <div class="row">
+      <div class="col-6">
         <h2>Weather for {{ data.location.name }}</h2>
         <p>
           {{data.location.name}} is Located in {{data.location.region}} Region
           of {{data.location.country}} in {{data.location.tz_id}}
         </p>
-        <p>condition is {{data.current.condition.text}}</p>
-        <img src="{{data.current.condition.icon}}" width="1" alt="" />
-
-        {% else %}
-        <p>{{ error }}</p>
-        {% endif %}
+        
       </div>
+      <div class="col-6">
+        <img src="{{data.current.condition.icon}}" width="" alt="" />
+        <p> The Weather condition is {{data.current.condition.text}}</p>
+        <p> The Temperature is {{data.current.temp_c}}°C</p>
+        <p> The Wind Speed is {{data.current.wind_kph}} km/h</p>
+      </div>
+
+      {% else %}
+      <p>{{ error }}</p>
     </div>
-  </body>
-</html>
+    {% endif %}
+</div>
+{% endblock%}
