--- a/templates/jokes.html
+++ b/templates/jokes.html
@@ -1,22 +1,27 @@
-{% extends "templates/base.html" %}
-{% block content %}
+{% extends "templates/base.html" %} {% block content %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     {% load static%}
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>jokes</title>
-</head>
-<body>
-    <h4>Lough with me</h4>
-    {% if joke %}
-    <p>{{ joke.value }}</p>
-    {% else %}
-    <p>Sorry, no jokes available</p>
-    {% endif %}
-
-</body>
+  </head>
+  <body>
+    <div class="container rounded bg-success p-1">
+      <h4 class="text-light text-center bg-info px-5 py-1">Lough with me here About Norris &#128512;</h4>
+      {% if joke %}
+      <p class="text-white text-center bg-secondary px-5 py-1">{{ joke.value }} &#128514;</p>
+      {% else %}
+      <p class="text-danger">Sorry, no jokes available</p>
+      {% endif %}
+    </div>
+  </body>
 </html>
 {% endblock %}
