--- a/templates/jokes.html
+++ b/templates/jokes.html
@@ -15,11 +15,19 @@
   </head>
   <body>
     <div class="container rounded bg-success p-1">
-      <h4 class="text-light text-center bg-info px-5 py-1">Lough with me here About Norris &#128512;</h4>
+      <h4 class="text-light text-center px-5 py-1">
+        Lough with me here About Norris &#128512;
+      </h4>
       {% if joke %}
-      <p class="text-white text-center bg-secondary px-5 py-1">{{ joke.value }} &#128514;</p>
+      <p class="text-white text-center bg-secondary px-5 py-1">
+        {{ joke.value }} &#128514;
+      </p>
+      <a href="{% url 'jokes' %}" class="btn btn-primary"
+        >Fetch another Joke &#128513;</a
+      >
       {% else %}
       <p class="text-danger">Sorry, no jokes available</p>
+
       {% endif %}
     </div>
   </body>
