--- a/templates/Login.html
+++ b/templates/Login.html
@@ -18,6 +18,7 @@
         <form action="" method="post" class="row text-center p-5">
           {% csrf_token %}
           <h1>Login</h1>
+          
           {% if error_message %}
           <p style="color: red">{{ error_message }}</p>
           {% endif %}
@@ -47,6 +48,7 @@
           <div class="row">
             <p>Don't have an account?</p>
           </div>
+          <p>you can use username <b>admin</b> and password <b>1234</b> to sign as anonymous
           <div class="row">
             <a href="{% url 'register' %}" class="">register</a>
           </div>
