--- a/templates/signup.html
+++ b/templates/signup.html
@@ -23,6 +23,7 @@
         <form action="" method="post" class="row text-center p-5">
           {% csrf_token %}
           <h1>Register</h1>
+          <p>use atleast 8 char password with a special symbol, uppercase to register</p>
           {% if error_message %}
           <p style="color: red">{{ error_message }}</p>
           {% endif %}
